--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/1ven/json-parser/issues"
   },
-  "homepage": "https://github.com/1ven/json-parser#readme"
+  "homepage": "https://github.com/1ven/json-parser#readme",
+  "devDependencies": {
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.1"
+  }
 }
