--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "json-parser",
   "version": "1.0.0",
   "description": "Custom JSON parser written in typescript",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
