--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Custom JSON parser written in typescript",
   "main": "lib/index.js",
   "scripts": {
+    "prepublish": "npm run build",
     "build": "NODE_ENV=production webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/1ven/json-parser#readme",
   "devDependencies": {
+    "mocha": "^3.0.2",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2",
