--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Custom JSON parser written in typescript",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "npm run build",
     "build": "NODE_ENV=production webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install && npm run build"
   },
   "repository": {
     "type": "git",
