--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack -p",
-    "test": "mocha",
+    "test": "mocha ./test/**/*.ts --compilers ts-node/register",
     "postinstall": "typings install && npm run build"
   },
   "repository": {
@@ -26,6 +26,7 @@
   "devDependencies": {
     "mocha": "^3.0.2",
     "ts-loader": "^0.8.2",
+    "ts-node": "^1.2.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2",
     "webpack": "^1.13.1"
