--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/1ven/json-parser#readme",
   "devDependencies": {
+    "expect": "^1.20.2",
     "mocha": "^3.0.2",
     "ts-loader": "^0.8.2",
     "ts-node": "^1.2.2",
